# ctdproc

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
seabirdscientific/: instrument_data.py
src/: parsers.py  processing.py
